--- a/404.md
+++ b/404.md
@@ -3,7 +3,7 @@ layout: page
 title: "Page Not Found"
 excerpt: "Page not found. Your pixels are in another canvas."
 sitemap: false
-permalink: /404.html
+permalink: /home/
 ---
 
 Sorry, but the page you were trying to view does not exist --- perhaps you can try searching for it below.
